# LaCabraProyecto1

./: HTTP Request.jmx  README.md
axum-prototype-auth/: Cargo.toml  Dockerfile  Dockerfile.develop  docker-compose.yml  entrypoint.sh
axum-prototype-auth/entity/: Cargo.toml
axum-prototype-auth/entity/src/: user.rs
axum-prototype-auth/migration/src/: m20220101_000001_create_table_user.rs
axum-prototype-auth/postman/: thunder-collection_axum-auth_postman_v1.json
axum-prototype-auth/src/: main.rs  routes.rs
axum-prototype-auth/src/handlers/: auth.rs  mod.rs  prelude.rs  user_login.rs  user_register.rs
axum-prototype-auth/src/utils/: create_token.rs  mod.rs  prelude.rs
fast-sub/: Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
fast-sub/src/: main.py
fiber-orchestrator/: Dockerfile.develop  docker-compose.yml  go.mod  go.sum  main.go
fiber-orchestrator/handlers/: register-sportmen.go
fiber-orchestrator/structs/: Sporment.go  User.go  respose.go  sub.go
fiber-orchestrator/utils/: create-sportman.go  create-user.go  get-sub.go  go-requests.go
fiber-postgres-template/: .env.tamplate  Dockerfile  docker-compose.yml  go.mod  go.sum  main.go
fiber-postgres-template/database/: connect.go
fiber-postgres-template/handlers/: create-sportman.go
fiber-postgres-template/middleware/: authorization.go
fiber-postgres-template/model/: sportman.go
fiber-sub/: Dockerfile  go.mod  main.go
proyecto-1-kubernetes/: .gitignore
proyecto-1-kubernetes/k8s/: k8s-ingress.yaml  k8s-secrets-deployment.yaml  k8s-service.yaml
(+4 files in other folders)
